Added Accept Applicants Feature

--- a/src/app/book-appointment/book-appointment.page.html
+++ b/src/app/book-appointment/book-appointment.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="C">
 
   <form [formGroup]="makerequestForm" (ngSubmit)="onCreateRequest()">
     <ion-card class="available-job-card">
