--- a/src/app/clientjobs/clientjobs.page.scss
+++ b/src/app/clientjobs/clientjobs.page.scss
@@ -37,7 +37,17 @@ ion-list {
 .align-end {
     text-align: right;
 }
-  
+
+.filtercard {
+    width: 98%;
+    border-radius: 10px;
+    border: 2px solid black;
+    background-color: white;
+    margin-left: 25px;
+    margin-right: 25px;
+}
+
+
 
   
 
