--- a/src/app/clientjobs/clientjobs.page.html
+++ b/src/app/clientjobs/clientjobs.page.html
@@ -50,7 +50,7 @@
           <ion-row>
             <ion-col size="0.5">
               <ion-thumbnail text-wrap>
-                <ion-icon class="center-right" name="person" color="medium"></ion-icon>
+                <ion-icon size="large" class="center-right" name="briefcase" color="medium"></ion-icon>
               </ion-thumbnail>
             </ion-col>
             <ion-col>
