--- a/src/app/erjobs/erjobs.page.html
+++ b/src/app/erjobs/erjobs.page.html
@@ -7,7 +7,7 @@
 <ion-content class="ER">
   <ion-segment style="--color-checked: #60b5ff;" [(ngModel)]="mySegment" (ionChange)="segmentChanged(mySegment)">
     <ion-segment-button value="ERJobs">
-      <ion-label>Jobs</ion-label>
+      <ion-label>Jobs To Be Done</ion-label>
     </ion-segment-button>
     <ion-segment-button value="ERApplied">
       <ion-label>Jobs Applied</ion-label>
