--- a/src/app/homepage/homepage.page.html
+++ b/src/app/homepage/homepage.page.html
@@ -10,7 +10,9 @@
     <ion-item>	
       <p>Hello {{userEmail}}</p>
     </ion-item>	
+    <ion-button	expand="block" color="secondary" (click)=profile()>Profile</ion-button>	
     <ion-button	expand="block" color="secondary" (click)=logout()>Logout</ion-button>	
+    
   </div>
 </ion-card>
 
