Display Jobs Confirmed + Do Tabs + Make side menu  (#30)
* Reconfigured home page + add nav to login/signup

* Added function for submit errand request

* Added upload photo feature to signup

* Changed UI and TS for Submit Errand Request

* Made upload image work as intended

* Added getavailablejobsbyclient + changed submit validation

* Added filter to client job request

* Added update photo page with functions

* Fixed problem with update photo

* Actually fixed updatephoto this time

* Made some UI changes to upload photo

* Add details page for clientjobs + add job ID

* Added UI for job applicants + Added some CSS

* Retrieve by email dynamically

* Show applicants for job

* Added Accept Applicants Feature

--- a/src/global.scss
+++ b/src/global.scss
@@ -64,6 +64,11 @@ ion-content.C{
     --ion-background-color: linear-gradient(#daffb7, #60b5ff);
 }
 
+ion-footer.segment-footer{
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+}
+
 .transparent-stylebackground{
     background-color: transparent;
     --ion-background-color: transparent;
