Created Side Menu for ER
Made sure all Side Menus are redirected properly

--- a/src/app/erjobs/erjobs.page.html
+++ b/src/app/erjobs/erjobs.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-title>Jobs</ion-title>
+    <ion-buttons slot="end">
+      <ion-menu-button menuId="second"></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
