--- a/src/app/all-errand-requests/all-errand-requests.page.html
+++ b/src/app/all-errand-requests/all-errand-requests.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar color="primary">
+    <ion-buttons slot="end">
+      <ion-menu-button menuId="second"></ion-menu-button>
+    </ion-buttons>
     <ion-title>Errand Requests</ion-title>
   </ion-toolbar>
 </ion-header>
