--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,4 +17,23 @@
         </ion-content>
       </ion-menu>
   <ion-router-outlet id="content1"></ion-router-outlet>
+
+  <ion-menu side="end" menuId="second" contentId="content2">
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>Navigate Errand Runner</ion-title>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content>
+        <ion-list *ngFor="let pages of navigateER">
+        <ion-menu-toggle auto-hide="true">
+          <ion-item [routerLink]="pages.url" routerDirection="forward">
+              <ion-icon [name]="pages.icon" slot="start"></ion-icon>
+                 {{pages.title}} 
+          </ion-item>
+        </ion-menu-toggle>
+        </ion-list>
+      </ion-content>
+    </ion-menu>
+<ion-router-outlet id="content2"></ion-router-outlet>
 </ion-app>
