--- a/src/app/clientjobs/clientjobs.page.html
+++ b/src/app/clientjobs/clientjobs.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar color="primary">
     <ion-title>My Jobs</ion-title>
     <ion-buttons slot="end">
-      <ion-menu-button></ion-menu-button>
+      <ion-menu-button menuId="first"></ion-menu-button>
       </ion-buttons>
   </ion-toolbar>
 </ion-header>
