--- a/src/app/users/users.page.html
+++ b/src/app/users/users.page.html
@@ -1,52 +1,70 @@
 <ion-header>
-  <ion-toolbar color="primary">
-    <ion-title style="text-align: center;">Profile</ion-title>
+  <ion-toolbar class="transparent-stylebackground">
+      <ion-back-button slot="start"></ion-back-button>
   </ion-toolbar>
-</ion-header>
+</ion-header> 
 
-<ion-content style="">
-  <div class="list card" >
-    <div style="background-color: aquamarine; padding: 15px;"> 
-      <!-- <div class="profile-picture big-profile-picture" style="">
-        <img src="{{user.icon}}">
-      </div> -->
-      <div style="text-align: center;">
-        <h2 class="profile-name dark">{{users.name}}</h2>
-      </div>
+<ion-content class="homepage">
+  <ion-list class="transparent-stylebackground" lines="none">
+      <ion-item class="profile-item">
+        <ion-grid>
+          <ion-row>
+            <div style="margin: auto;">
+              <img [src]="userwithimg?.image" class="profile-picture big-profile-picture" (click)="updatephoto()">
+            </div>
+          </ion-row>
+          <ion-row>
+            <h2 class="profile-name dark">{{users?.name}}</h2>
+          </ion-row>
+          <ion-row>
+            <h3 class="profile-item"><div>{{users?.address}}</div></h3>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+
+
+      <ion-item class="profile-item-info">
+        <ion-grid style="--ion-grid-padding: 1pc; --ion-grid-column-padding: 1pc; margin: auto;">
+          <ion-row>
+            <ion-col size="4"></ion-col>
+            <ion-col>
+              Gender:
+            </ion-col>
+            <ion-col size="6">
+              {{users?.gender}}
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="4"></ion-col>
+            <ion-col>
+              Birthday:
+            </ion-col>
+            <ion-col size="6">
+              {{users?.birthday | date: 'MMM d, yyyy'}}
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="4"></ion-col>
+            <ion-col>
+              Contact Number:
+            </ion-col>
+            <ion-col size="6">
+              {{users?.phoneno}}
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="4"></ion-col>
+            <ion-col>
+              Email:
+            </ion-col>
+            <ion-col size="6">
+              {{users?.email}}
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+    <div>
+      <ion-button style="margin: 1.2pc; font-size: 1.1pc;" size="large" expand="block" [routerLink]="['/updateprofile']">Edit Profile</ion-button>
     </div>
-    <div style="display:flex; flex-wrap: wrap; align-content: flex-start; align-items: center; justify-content: center; height: calc(100vh - 234px - 80px);">
-      <div style="" class="childClass">
-        <div style="margin: 15px;">
-          <h4>Gender</h4>
-        </div>
-        <div>
-          {{users.gender}}
-        </div>
-      </div>
-      <div style="" class="childClass">
-        <div style="margin: 15px;">
-          <h4>Mobile Number</h4>
-        </div>
-        <div>
-          {{users.phoneno}}
-        </div>
-      </div>
-      <div style="" class="childClass">
-        <div style="margin: 15px;">
-          <h4>Email</h4>
-        </div>
-        <div>
-          {{users.email}}
-        </div>
-      </div>
-      <div style="" class="childClass">
-        <div style="margin: 15px;">
-          <h4>Birthday</h4>
-        </div>
-        <div>
-          {{ users.birthday }}
-        </div>
-      </div>
-    </div>
-  </div>
+  </ion-list>
 </ion-content>
