--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <ion-menu side="end" menuId="first" contentId="content1">
         <ion-header>
           <ion-toolbar>
-            <ion-title>Navigate</ion-title>
+            <ion-title>Navigate Client</ion-title>
           </ion-toolbar>
         </ion-header>
         <ion-content>
