--- a/src/app/clientjobsnotification/clientjobsnotification.page.html
+++ b/src/app/clientjobsnotification/clientjobsnotification.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>Job Applicants</ion-title>
+    <ion-title>Errand Applicants</ion-title>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="clientjobs"></ion-back-button>
     </ion-buttons>
@@ -10,7 +10,7 @@
 <ion-content class="C">
   <ion-card class="available-job-card">
     <ion-card-header>
-      <ion-card-title>Job Details</ion-card-title>
+      <ion-card-title>Errand Details</ion-card-title>
     </ion-card-header>
     <ion-card-content>
       <ion-grid>
@@ -55,7 +55,7 @@
     </ion-card-header>
     <ion-card-content>
       <div id="container" *ngIf="jobapplicants?.length===0">
-        <p class="center">There are currently no applicants for this job</p>
+        <p class="center">There are currently no applicants for this errand</p>
         </div>
       <ion-grid>
         <ion-row>
