--- a/src/app/users/users.page.html
+++ b/src/app/users/users.page.html
@@ -1,49 +1,70 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>users</ion-title>
+  <ion-toolbar class="transparent-stylebackground">
+      <ion-back-button slot="start"></ion-back-button>
   </ion-toolbar>
-</ion-header>
+</ion-header> 
 
-<ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col>
-        Name
-      </ion-col>
-      <ion-col>
-        Address
-      </ion-col>
-      <ion-col>
-        Email
-      </ion-col>
-      <ion-col>
-        Gender
-      </ion-col>
-      <ion-col>
-        Phone Number
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        {{ users.name }}
-      </ion-col>
-      <ion-col>
-        {{ users.address }}
-      </ion-col>
-      <ion-col>
-        {{ users.email }}
-      </ion-col>
-      <ion-col>
-        {{ users.gender }}
-      </ion-col>
-      <ion-col>
-        {{ users.phoneno }}
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-  <!--
-    <div *ngIf="selectedItem" padding>
-      You navigated here from <b>{{selectedItem.title }}</b>
+<ion-content class="homepage">
+  <ion-list class="transparent-stylebackground" lines="none">
+      <ion-item class="profile-item">
+        <ion-grid>
+          <ion-row>
+            <div style="margin: auto;">
+              <img [src]="userwithimg?.image" class="profile-picture big-profile-picture" (click)="updatephoto()">
+            </div>
+          </ion-row>
+          <ion-row>
+            <h2 class="profile-name dark">{{users?.name}}</h2>
+          </ion-row>
+          <ion-row>
+            <h3 class="profile-item"><div>{{users?.address}}</div></h3>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+
+
+      <ion-item class="profile-item-info">
+        <ion-grid style="--ion-grid-padding: 1pc; --ion-grid-column-padding: 1pc; margin: auto;">
+          <ion-row>
+            <ion-col size="4"></ion-col>
+            <ion-col>
+              Gender:
+            </ion-col>
+            <ion-col size="6">
+              {{users?.gender}}
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="4"></ion-col>
+            <ion-col>
+              Birthday:
+            </ion-col>
+            <ion-col size="6">
+              {{users?.birthday | date: 'MMM d, yyyy'}}
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="4"></ion-col>
+            <ion-col>
+              Contact Number:
+            </ion-col>
+            <ion-col size="6">
+              {{users?.phoneno}}
+            </ion-col>
+          </ion-row>
+          <ion-row>
+            <ion-col size="4"></ion-col>
+            <ion-col>
+              Email:
+            </ion-col>
+            <ion-col size="6">
+              {{users?.email}}
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+    <div>
+      <ion-button style="margin: 1.2pc; font-size: 1.1pc;" size="large" expand="block" [routerLink]="['/updateprofile']">Edit Profile</ion-button>
     </div>
-  -->
+  </ion-list>
 </ion-content>
