--- a/src/app/users/users.page.html
+++ b/src/app/users/users.page.html
@@ -10,7 +10,7 @@
         <ion-grid>
           <ion-row>
             <div style="margin: auto;">
-              <img [src]="userwithimg?.image" class="profile-picture big-profile-picture" (click)="updatephoto()">
+              <img [src]="users?.image" class="profile-picture big-profile-picture" (click)="updatephoto()">
             </div>
           </ion-row>
           <ion-row>
