--- a/src/app/erjobs/erjobs.page.scss
+++ b/src/app/erjobs/erjobs.page.scss
@@ -19,3 +19,14 @@ ion-card {
     right: 30%;
     transform: translateY(-50%) translateX(30%);
 }
+
+.center {
+    height: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+.center-content{
+    color: red;
+}
