--- a/src/app/userprofile/userprofile.page.html
+++ b/src/app/userprofile/userprofile.page.html
@@ -14,7 +14,7 @@
         <ion-grid>
           <ion-row>
             <div style="margin: auto;">
-              <img [src]="userwithimg?.image" class="profile-picture big-profile-picture">
+              <img [src]="user?.image" class="profile-picture big-profile-picture">
             </div>
           </ion-row>
           <ion-row>
