--- a/src/app/users/users.page.html
+++ b/src/app/users/users.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar class="transparent-stylebackground">
-      <ion-back-button slot="start"></ion-back-button>
+      <ion-back-button slot="start" defaultHref="homepage"></ion-back-button>
   </ion-toolbar>
 </ion-header> 
 
@@ -11,7 +11,7 @@
           <ion-row>
             <div class="container">
               <div class="outer" style="border: 1px solid rgba(0, 0, 0, 0.25); padding: 3px;">
-              <img [src]="userwithimg?.image" class="outer">
+              <img [src]="users?.image" class="outer">
               <ion-button shape="round" color="medium" class="inner" [routerLink]="['/updatephoto']">
                 <ion-icon name="camera" size="large"></ion-icon>
               </ion-button>
