--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -40,5 +40,8 @@
     <ion-button style="margin:1.4pc" expand="block" type="submit" (click)=login()>
       Login
     </ion-button>
+    <ion-button style="margin:1.4pc" fill="clear" expand="block" (click)="cancel()">
+      Cancel
+    </ion-button>
   </ion-card>
 </ion-content>
