--- a/src/app/homepage/homepage.page.html
+++ b/src/app/homepage/homepage.page.html
@@ -1,4 +1,4 @@
-<ion-header collapse="condense">
+<ion-header>
       <ion-toolbar style="--ion-background-color: transparent;">
           <ion-icon name="exit" size="large" slot="end" style="margin-right:1pc; color:#60b5ff;" (click)="logout()"></ion-icon>
       </ion-toolbar>
