Changes to Errand Details

--- a/src/app/errand-details/errand-details.page.html
+++ b/src/app/errand-details/errand-details.page.html
@@ -32,7 +32,16 @@
       <ion-col class="large" (click)="redirectprofile()">
         {{ user }}
       </ion-col>
+        
+      <ion-col class="large" style="margin-left: 1pc;" size="2">
+        Pricing:
+      </ion-col>
+      <ion-col class="large">
+        {{ job?.price | currency }}
+      </ion-col>
 
+    </ion-row>
+    <ion-row>
       <ion-col class="large" style="margin-left: 1pc;" size="2">
         Errand Meeting Time:
       </ion-col>
