--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
 <ion-app>
+
   <ion-menu side="end" menuId="first" contentId="content1">
+
     <ion-header>
       <ion-toolbar>
-        <ion-title>Navigate</ion-title>
+        <ion-title>Navigate Client</ion-title>
       </ion-toolbar>
     </ion-header>
+
     <ion-content>
       <ion-list *ngFor="let pages of navigate">
         <ion-menu-toggle auto-hide="true">
@@ -15,32 +18,25 @@
         </ion-menu-toggle>
       </ion-list>
     </ion-content>
-  </ion-menu>
-    <ion-menu side="end" menuId="first" contentId="content1">
-        <ion-header>
-          <ion-toolbar>
-            <ion-title>Navigate Client</ion-title>
-          </ion-toolbar>
-        </ion-header>
-        <ion-content>
-          <ion-list *ngFor="let pages of navigate">
-          <ion-menu-toggle auto-hide="true">
-            <ion-item [routerLink]="pages.url" routerDirection="forward">
-                <ion-icon [name]="pages.icon" slot="start"></ion-icon>
-                   {{pages.title}} 
-            </ion-item>
-          </ion-menu-toggle>
-          </ion-list>
-        </ion-content>
-      </ion-menu>
 
-    <ion-router-outlet id="content1"></ion-router-outlet>
+    <ion-footer>
+      <ion-menu-toggle auto-hide="true">
+        <ion-item [routerLink]="['homepage']" routerDirection="forward">
+          <ion-icon name="home" slot="start"></ion-icon>
+          Back to Home
+        </ion-item>
+      </ion-menu-toggle>
+    </ion-footer>
+  </ion-menu>
+  <ion-router-outlet id="content1"></ion-router-outlet>
+
   <ion-menu side="end" menuId="second" contentId="content2">
     <ion-header>
       <ion-toolbar>
         <ion-title>Navigate Errand Runner</ion-title>
       </ion-toolbar>
     </ion-header>
+
     <ion-content>
       <ion-list *ngFor="let pages of navigateER">
         <ion-menu-toggle auto-hide="true">
@@ -51,6 +47,16 @@
         </ion-menu-toggle>
       </ion-list>
     </ion-content>
+
+    <ion-footer>
+      <ion-menu-toggle auto-hide="true">
+        <ion-item [routerLink]="['homepage']" routerDirection="forward">
+          <ion-icon name="home" slot="start"></ion-icon>
+          Back to Home
+        </ion-item>
+      </ion-menu-toggle>
+    </ion-footer>
+
   </ion-menu>
   <ion-router-outlet id="content2"></ion-router-outlet>
 </ion-app>
