--- a/src/app/homepage/homepage.page.scss
+++ b/src/app/homepage/homepage.page.scss
@@ -1,41 +1,42 @@
 ion-item {
     --ion-background-color: white;
 }
-
+ 
 .profile-item {
     text-align: center;
     margin: auto !important;
   }
   
-.profile-item-info {
+  .profile-item-info {
     text-align: left;
     margin: auto !important;
     font-size: 1.1pc;
-}
+  }
   
-.profile-name {
+  
+  .profile-name {
     padding-top: 20px;
     font-size: x-large !important;
     font-weight: bold !important;
     margin: auto !important;
     text-transform: capitalize;
-}
-
-.container {
+  }
+  
+  .container {
     width: 230px;
     height: 230px;
     display: block;
     margin: auto;
-}
+  }
   
-.outer {
-  width: 100% !important;
-  height: 100% !important;
-  max-width: 230px !important; /* any size */
-  max-height: 230px !important; /* any size */
-  background-color: #6eafd4;
-  border-radius: 100%;
-  position: relative;
-  margin: auto !important;
-}
+  .outer {
+    width: 100% !important;
+    height: 100% !important;
+    max-width: 230px !important; /* any size */
+    max-height: 230px !important; /* any size */
+    margin: auto;
+    background-color: #6eafd4;
+    border-radius: 100%;
+    position: relative;
+    }
   
