--- a/src/app/users/users.page.html
+++ b/src/app/users/users.page.html
@@ -31,38 +31,37 @@
       <ion-item class="profile-item-info">
         <ion-grid style="--ion-grid-padding: 1pc; --ion-grid-column-padding: 1pc; margin: auto;">
           <ion-row>
-            <ion-col size="4"></ion-col>
-            <ion-col>
+            <ion-col style="text-align: right;">
               Gender:
             </ion-col>
-            <ion-col size="6">
+            <ion-col>
               {{users?.gender}}
             </ion-col>
           </ion-row>
+
           <ion-row>
-            <ion-col size="4"></ion-col>
-            <ion-col>
+            <ion-col style="text-align: right;">
               Birthday:
             </ion-col>
-            <ion-col size="6">
+            <ion-col>
               {{users?.birthday | date: 'MMM d, yyyy'}}
             </ion-col>
           </ion-row>
+
           <ion-row>
-            <ion-col size="4"></ion-col>
-            <ion-col>
+            <ion-col style="text-align: right;">
               Contact Number:
             </ion-col>
-            <ion-col size="6">
+            <ion-col>
               {{users?.phoneno}}
             </ion-col>
           </ion-row>
+
           <ion-row>
-            <ion-col size="4"></ion-col>
-            <ion-col>
+            <ion-col style="text-align: right;">
               Email:
             </ion-col>
-            <ion-col size="6">
+            <ion-col>
               {{users?.email}}
             </ion-col>
           </ion-row>
