--- a/src/app/erjobs/erjobs.page.html
+++ b/src/app/erjobs/erjobs.page.html
@@ -15,6 +15,9 @@
     <ion-segment-button value="ERApplied">
       <ion-label>Errands Applied</ion-label>
     </ion-segment-button>
+    <ion-segment-button value="ERRejected">
+      <ion-label>Errands Rejected</ion-label>
+    </ion-segment-button>
   </ion-segment>
 
   <div [ngSwitch]="mySegment">
@@ -36,11 +39,11 @@
                 <ion-card-title>{{item?.errandname}}</ion-card-title>
               </ion-row>
               <ion-row>
-                <ion-card-subtitle>Errand Category: {{item.category}} </ion-card-subtitle>
+                <ion-card-subtitle>Errand Category: {{item?.category}} </ion-card-subtitle>
               </ion-row>
             </ion-col>
             <ion-col class="align-end">
-              <ion-button (click)="toClient(item.client)">Client Profile
+              <ion-button (click)="toClient(item?.client)">Client Profile
               </ion-button>
             </ion-col>
           </ion-row>
@@ -53,9 +56,10 @@
             <ion-col>
               <ion-label>
                 <div text-wrap>
-                  <p>Client: {{ item.client }}</p>
-                  <p>Errand Meeting Time: {{item.date | date:'d MMM yyyy'}}, {{item.time}}</p>
-                  <p>Errand Description: {{ item.description }}</p>
+                  <p>Client: {{ item?.client }}</p>
+                  <p>Errand Price: {{ item?.price | currency }}</p>
+                  <p>Errand Meeting Time: {{item?.date | date:'d MMM yyyy'}}, {{item?.time}}</p>
+                  <p>Errand Description: {{ item?.description }}</p>
                 </div>
               </ion-label>
             </ion-col>
@@ -81,7 +85,7 @@
                 <ion-card-title>{{item?.errandname}}</ion-card-title>
               </ion-row>
               <ion-row>
-                <ion-card-subtitle>Errand Category: {{item.category}} </ion-card-subtitle>
+                <ion-card-subtitle>Errand Category: {{item?.category}} </ion-card-subtitle>
               </ion-row>
             </ion-col>
             <ion-col class="align-end">
@@ -98,9 +102,10 @@
             <ion-col>
               <ion-label>
                 <div text-wrap>
-                  <p>Client: {{ item.client }}</p>
-                  <p>Errand Meeting Time: {{item.date | date:'d MMM yyyy'}}, {{item.time}}</p>
-                  <p>Errand Description: {{ item.description }}</p>
+                  <p>Client: {{ item?.client }}</p>
+                  <p>Errand Price: {{ item?.price | currency }}</p>
+                  <p>Errand Meeting Time: {{item?.date | date:'d MMM yyyy'}}, {{item?.time}}</p>
+                  <p>Errand Description: {{ item?.description }}</p>
                 </div>
               </ion-label>
             </ion-col>
@@ -108,5 +113,49 @@
         </ion-card-content>
       </ion-card>
     </ion-grid>
+
+    <ion-grid *ngSwitchCase="'ERRejected'">
+      <ion-card *ngFor="let item of jobsRejected">
+        <ion-card-header>
+          <ion-row>
+            <ion-col size="0.5">
+              <ion-thumbnail text-wrap>
+                <ion-icon size="large" class="center-right" name="briefcase" color="medium"></ion-icon>
+              </ion-thumbnail>
+            </ion-col>
+            <ion-col>
+              <ion-row>
+                <ion-card-title>{{item?.errandname}}</ion-card-title>
+              </ion-row>
+              <ion-row>
+                <ion-card-subtitle>Errand Category: {{item?.category}} </ion-card-subtitle>
+              </ion-row>
+            </ion-col>
+            <ion-col class="align-end">
+              <ion-button (click)="toClient(item?.client)">Client Profile
+              </ion-button>
+            </ion-col>
+          </ion-row>
+        </ion-card-header>
+  
+        <ion-card-content>
+          <ion-row>
+            <ion-col size="0.5">
+            </ion-col>
+            <ion-col>
+              <ion-label>
+                <div text-wrap>
+                  <p>Client: {{ item?.client }}</p>
+                  <p>Errand Price: {{ item?.price | currency }}</p>
+                  <p>Errand Meeting Time: {{item?.date | date:'d MMM yyyy'}}, {{item?.time}}</p>
+                  <p>Errand Description: {{ item?.description }}</p>
+                </div>
+              </ion-label>
+            </ion-col>
+          </ion-row>
+        </ion-card-content>
+      </ion-card>
+    </ion-grid>
+
   </div>
 </ion-content>
