Finalised reject + cleaned up clientjobs code

--- a/src/app/book-appointment/book-appointment.page.html
+++ b/src/app/book-appointment/book-appointment.page.html
@@ -50,7 +50,7 @@
       <ion-row *ngFor="let prices of errandprice">
         <ion-col size="12">
           <ion-item>
-            <ion-label class="disabled">Price/Hour:</ion-label>
+            <ion-label class="disabled">Base Price:</ion-label>
             <ion-input class="input-disabled" disabled="true" value="{{prices.price | currency}}">
             </ion-input>
           </ion-item>
