--- a/src/app/book-appointment/book-appointment.page.scss
+++ b/src/app/book-appointment/book-appointment.page.scss
@@ -20,7 +20,7 @@ ion-item, ion-button {
 }
 
 .input-disabled {
-    opacity: 0.7 !important;
-    margin-left: 83%;
+    opacity: 0.8 !important;
+    margin-right: 10px;
     
 }
