--- a/src/app/clientjobs/clientjobs.page.html
+++ b/src/app/clientjobs/clientjobs.page.html
@@ -88,6 +88,9 @@
             </ion-card-content>
           </ion-card>
         </ion-item>
+        <div *ngIf="job?.length === 0" class="center">
+          <h5 class="center-content"> You have no errand requests currently</h5>
+        </div>
       </ion-grid>
       <ion-grid *ngSwitchCase="'JobsConfirmed'">
         <ion-item lines="none" *ngFor="let c of jobsconfirmed">
@@ -131,18 +134,15 @@
             </ion-card-content>
           </ion-card>
         </ion-item>
+        <div *ngIf="jobsconfirmed?.length === 0" class="center">
+          <h5 class="center-content"> You have no errands confirmed </h5>
+        </div>
       </ion-grid>
     </ion-list>
   </div>
-  <div *ngIf="nodata" class="center">
-    <h5 class="center-content"> You have no errand requests currently </h5>
-  </div>
-  <div *ngIf="nodatamonth" class="center">
-    <h5 class="center-content"> You have no errand requests for this month</h5>
-  </div>
 </ion-content>
 <ion-footer class="segment-footer">
-  <ion-segment #defaultsegment style="--color-checked: #60b5ff;" [(ngModel)]="mySegment"
+  <ion-segment style="--color-checked: #60b5ff;" [(ngModel)]="mySegment"
     (ionChange)="segmentChanged(mySegment)">
     <ion-segment-button value="ClientJobsCreated" (click)="defaultfilter()">
       <ion-label>Errands Created</ion-label>
