--- a/src/app/all-errand-requests/all-errand-requests.page.scss
+++ b/src/app/all-errand-requests/all-errand-requests.page.scss
@@ -9,6 +9,7 @@ ion-card {
     color: black;
     background-color: white;
     --background-hover: #d7d8da;
+    margin-left: 0pc;
 }
 ion-card-header{
     border-bottom: 1px solid black;
