--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -108,7 +108,7 @@
           </ion-item>
         </ion-col>
 
-        <ion-col size="8">
+        <ion-col>
           <ion-item lines="none" style="overflow: visible;">
             <ion-label class="google-label" position="floating">
               Phone Number
