--- a/src/app/all-errand-requests/all-errand-requests.page.html
+++ b/src/app/all-errand-requests/all-errand-requests.page.html
@@ -36,7 +36,7 @@
     </form>
   </ion-grid>
 
-  <ion-grid>
+  <ion-grid style="margin: 1pc;">
     <ion-card *ngFor="let item of jobs" [routerLink]="['/errand-details', item.id]">
       <ion-card-header>
         <ion-row>
