Added review service

--- a/src/app/review/review.page.html
+++ b/src/app/review/review.page.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>review</ion-title>
+    <ion-title>Review</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <h1>Reviews of {{ user.name }}</h1>
 </ion-content>
