--- a/src/app/users/users.page.html
+++ b/src/app/users/users.page.html
@@ -70,5 +70,8 @@
     <div>
       <ion-button style="margin: 1.2pc; font-size: 1.1pc;" size="large" expand="block" [routerLink]="['/updateprofile']">Edit Profile</ion-button>
     </div>
+    <div>
+      <ion-button style="margin: 1.2pc; font-size: 1.1pc;" size="large" expand="block" [routerLink]="['/review']">Review</ion-button>
+    </div>
   </ion-list>
 </ion-content>
