Added modal for rejection reason

--- a/src/global.scss
+++ b/src/global.scss
@@ -50,6 +50,15 @@ ion-card-title{
     margin-left: 0px;
     margin-right: 0px;
 }
+
+.errand-detail-card{
+    margin-bottom: 10px;
+    border: 1px solid black;
+    color: black;
+    padding: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
 //background styling 
 ion-content.homepage{
     --ion-background-color: linear-gradient(#ffffff, #60b5ff);
