--- a/src/app/clientjobsnotification/clientjobsnotification.page.html
+++ b/src/app/clientjobsnotification/clientjobsnotification.page.html
@@ -62,7 +62,7 @@
         </div>
       <ion-grid>
         <ion-row>
-          <ion-col size="6" *ngFor="let applicant of jobapplicants">
+          <ion-col size-md="6" size-sm *ngFor="let applicant of jobapplicants">
             <ion-card class="applicant-card">
               <ion-card-header>
                   <ion-card-title>Applicant Details:
